// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequiredConfig /> render empty when required is undefined 1`] = `
<span>
  None
</span>
`;

exports[`<RequiredConfig /> render optional label when required is false 1`] = `
<span>
  Optional
</span>
`;

exports[`<RequiredConfig /> render required label when required is true 1`] = `
<span>
  Required
</span>
`;
